--- a/NEWS
+++ b/NEWS
@@ -150,6 +150,12 @@ II) MAJOR CHANGES FROM PREVIOUS RELEASES
       necessary as there are ample other tools available to configure
       printer queues.
 
+   5) Many translations have been updated.
+
+   6) The Canon iPixma 4500 has been fixed.
+
+   7) L-size photo paper (3 1/2x5 inches) has been added.
+
 ----------------
 
 * CHANGES FROM GUTENPRINT 5.0.2 ONLY:
