Update number of supported printers.

--- a/NEWS
+++ b/NEWS
@@ -8,7 +8,7 @@ and Macintosh OS X (10.2 and above) systems.  Gutenprint includes CUPS
 and Foomatic drivers, and an enhanced Print plug-in for GIMP that
 replaces the print plug-in packaged with the GIMP distribution.
 
-Gutenprint currently supports almost 900 printer models.
+Gutenprint currently supports over 1300 printer models.
 
 Gutenprint 5.2.0-beta1 is the first beta release of Gutenprint 5.2.
 
