Add additional HP laser printers.

--- a/NEWS
+++ b/NEWS
@@ -210,6 +210,39 @@ II) MAJOR CHANGES FROM PREVIOUS RELEASES
        Gestetner MP 4000B
        Gestetner MP 5000
        Gestetner MP 5000B
+       HP LaserJet 1160
+       HP LaserJet 1320
+       HP LaserJet 2410
+       HP LaserJet 2420
+       HP LaserJet 2430
+       HP LaserJet 3015
+       HP LaserJet 3020
+       HP LaserJet 3030
+       HP LaserJet 3050
+       HP LaserJet 3052
+       HP LaserJet 3055
+       HP LaserJet 3380
+       HP LaserJet 3390
+       HP LaserJet 3392
+       HP LaserJet 4240
+       HP LaserJet 4250
+       HP LaserJet 4345 mfp
+       HP LaserJet 4350
+       HP LaserJet 5200
+       HP LaserJet 5200L
+       HP LaserJet 9040
+       HP LaserJet 9040 MFP
+       HP LaserJet 9050
+       HP LaserJet 9050 MFP
+       HP LaserJet M3027 MFP
+       HP LaserJet M3035 MFP
+       HP LaserJet M4345 MFP
+       HP LaserJet M5025 MFP
+       HP LaserJet M5035 MFP
+       HP LaserJet P2010
+       HP LaserJet P2015
+       HP LaserJet P3004
+       HP LaserJet P3005
        Infotec 4353 MF
        Infotec 4452 MF
        Infotec IS2022
