--- a/README
+++ b/README
@@ -1,15 +1,14 @@
-Welcome to Gutenprint 5.2.0-beta3!  Please read these notes carefully.
+Welcome to Gutenprint 5.2.0-beta4!  Please read these notes carefully.
 
-*** NOTE TO PACKAGERS: This is a beta release of the forthcoming 5.2
-    stable release.  As of 5.2 and until further notice, Gutenprint
-    will no longer deliver separate "development" and "stable" release
-    series.
+*** NOTE TO PACKAGERS: Please read the file README.package for issues
+    that are of interest to distributors and packagers of Gutenprint.
+    It is not necessary for end users of Gutenprint to read this file.
 
 ================================================================
 
 I) INTRODUCTION
 
-    This is Gutenprint version 5.2.0-beta3, a beta release of
+    This is Gutenprint version 5.2.0-beta4, a beta release of
     Gutenprint 5.2.  Gutenprint, formerly named Gimp-Print, is a suite
     of printer drivers that may be used with most common UNIX print
     spooling systems, including CUPS, lpr, LPRng, or others.  These
@@ -69,8 +68,9 @@ II) INSTALLATION
     administration skills along with superuser privileges.  Superuser
     privilege allows you to perform actions that may be damaging to
     your system.  If you are not comfortable with the material
-    discussed here and in the release notes, we recommend that you not
-    attempt to install this package from source.
+    discussed here and in the release notes, or with performing simple
+    administrative actions, we recommend that you not attempt to
+    install this package from source.
 
     Before beginning, please read the release notes carefully for any
     updates.
@@ -190,27 +190,10 @@ B) CORE DRIVER LIBRARY
     statically (with no use of shared libraries), you may use the
     option --disable-shared.
 
-    NOTES TO PACKAGERS: 
-
-    * You may wish to create a development package containing header
-      files and linkable libraries separate from the runtime package.
-      There are a few third party applications that link against
-      Gutenprint.
-
-    * Gutenprint permits installation of Gimp-Print 4.2 and Gutenprint
-      5.0 alongside Gutenprint 5.2, and in the future will permit
-      concurrent installation of different stable versions of
-      Gutenprint with different minor version numbers.  Therefore, you
-      should consider allowing Gutenprint 5.0, Gutenprint 5.2, and
-      Gimp-Print 4.2 to be installed concurrently.
-
-    * The core driver library component also includes locale files for
-      the libary and documentation.
-
 
 ----------------
 
-B) CUPS
+C) CUPS
 
     Gutenprint may be used as a driver under CUPS (Common UNIX
     Printing System), if your system uses that spooler.  Full
@@ -435,24 +418,10 @@ B) CUPS
 	this option unless you are certain that you understand the
 	problem and how to work around it.
 
-    NOTES TO PACKAGERS: 
-
-    * We recommend that your installation package run
-      cups-genppdupdate and restart CUPS as part of the installation
-      process.
-
-    * All files and directories with versioned names
-      (e. g. rastertogutenprint and the PPD files) may be installed
-      concurrently with other versions of Gimp-Print and Gutenprint as
-      described above.  Other executables (such as the Canon and Epson
-      back ends, and cups-calibrate) are not versioned, but are not
-      linked against libgutenprint and do not have any other
-      dependencies on Gutenprint.
-
 
 ----------------
 
-C) FOOMATIC
+D) FOOMATIC
 
     Foomatic is a printer meta-driver that can be used with any
     spooler (CUPS, lpd, LPRng, etc.) or even no spooler at all.  It
@@ -532,7 +501,7 @@ C) FOOMATIC
 
 ----------------
 
-D) GIMP
+E) GIMP
 
     Gutenprint may be used with an enhanced Print plug-in for GIMP
     (2.0 and above), providing the ability to print images.  Please
@@ -573,18 +542,10 @@ D) GIMP
     versions of Gimp-Print, but the configuration file format in
     Gutenprint 5.2 cannot be read by older versions of Gimp-Print.
 
-    NOTE TO PACKAGERS:
-
-    * The enhanced GIMP plugin, unlike the core library and the
-      Foomatic and CUPS drivers, may not be installed concurrently
-      with other versions.  For example, you may not install both the
-      Gimp-Print 4.2 and the Gutenprint 5.2 version of the Print
-      plugin, as they use different configuration file formats.
-
 
 ----------------
 
-E) ESCPUTIL
+F) ESCPUTIL
 
     "escputil" is a command line utility for administering Epson
     inkjet printers.  It performs head alignment, retrieval of ink
